<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.2</version> <!-- Note: User requested 3.x, using a specific recent version -->
        <relativePath/>
    </parent>

    <groupId>dev.m4tt3o.storable</groupId>
    <artifactId>storable-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>21</java.version>
    </properties>

    <modules>
        <module>storable-common</module>
        <module>storable-data</module>
        <module>storable-core</module>
        <module>storable-api</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>dev.m4tt3o.storable</groupId>
                <artifactId>storable-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.m4tt3o.storable</groupId>
                <artifactId>storable-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>dev.m4tt3o.storable</groupId>
                <artifactId>storable-data</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
